StaticHTMLOutput UPDATE comments/feed/index.html

--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments for Dev Test	</title>
-	<atom:link href="https://test.export.yaxdev.com/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>https://test.export.yaxdev.com/</link>
+	<atom:link href="https://export.yaxdev.com/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>https://export.yaxdev.com/</link>
 	<description>test</description>
 	<lastBuildDate>Sun, 14 Mar 2021 20:37:26 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -20,11 +20,11 @@
 	<item>
 		<title>
 		Comment on Hello world! by A WordPress Commenter		</title>
-		<link>https://test.export.yaxdev.com/2021/03/14/hello-world/#comment-1</link>
+		<link>https://export.yaxdev.com/2021/03/14/hello-world/#comment-1</link>
 
 		<dc:creator><![CDATA[A WordPress Commenter]]></dc:creator>
 		<pubDate>Sun, 14 Mar 2021 20:37:26 +0000</pubDate>
-		<guid isPermaLink="false">https://test.export.yaxdev.com/?p=1#comment-1</guid>
+		<guid isPermaLink="false">https://export.yaxdev.com/?p=1#comment-1</guid>
 
 					<description><![CDATA[Hi, this is a comment.
 To get started with moderating, editing, and deleting comments, please visit the Comments screen in the dashboard.
