StaticHTMLOutput UPDATE sample-page/feed/index.html

--- a/sample-page/feed/index.html
+++ b/sample-page/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: Sample Page	</title>
-	<atom:link href="https://test.export.yaxdev.com/sample-page/feed/" rel="self" type="application/rss+xml" />
-	<link>https://test.export.yaxdev.com/</link>
+	<atom:link href="https://export.yaxdev.com/sample-page/feed/" rel="self" type="application/rss+xml" />
+	<link>https://export.yaxdev.com/</link>
 	<description>test</description>
 	<lastBuildDate>Sun, 14 Mar 2021 20:37:26 +0000</lastBuildDate>
 	<sy:updatePeriod>
